--- a/AlphaS/AlphaS/AlphaS.csproj
+++ b/AlphaS/AlphaS/AlphaS.csproj
@@ -55,6 +55,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Forms\BasicDailyDataWindow.xaml.cs">
+      <DependentUpon>BasicDailyDataWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Forms\StockListWindow.xaml.cs">
       <DependentUpon>StockListWindow.xaml</DependentUpon>
     </Compile>
@@ -62,7 +65,12 @@
     <Compile Include="Setting\SettingManager.cs" />
     <Compile Include="DataSet\DataSet.cs" />
     <Compile Include="StaticClass.cs" />
+    <Compile Include="StockList\IStockListManager.cs" />
     <Compile Include="StockList\StockListManager.cs" />
+    <Page Include="Forms\BasicDailyDataWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Forms\StockListWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -109,7 +117,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="BasicDailyData\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
