--- a/AlphaS/AlphaSTests/AlphaSTests.csproj
+++ b/AlphaS/AlphaSTests/AlphaSTests.csproj
@@ -54,6 +54,7 @@
     <Compile Include="BasicDailyData\BasicDailyDataFileStatusInformationTests.cs" />
     <Compile Include="BasicDailyData\BasicDailyDataManagerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StaticClassTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AlphaS\AlphaS.csproj">
