--- a/AlphaS/AlphaSTests/AlphaSTests.csproj
+++ b/AlphaS/AlphaSTests/AlphaSTests.csproj
@@ -51,6 +51,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BasicDailyData\BasicDailyDataDownloaderTests.cs" />
     <Compile Include="BasicDailyData\BasicDailyDataFileStatusInformationTests.cs" />
     <Compile Include="BasicDailyData\BasicDailyDataManagerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
