--- a/AlphaS/AlphaS/AlphaS.csproj
+++ b/AlphaS/AlphaS/AlphaS.csproj
@@ -76,6 +76,8 @@
     <Compile Include="DataAnalyzer\IAnalyzedDataManager.cs" />
     <Compile Include="DataAnalyzer\DataAnalyzerViewModel.cs" />
     <Compile Include="DataAnalyzer\IDataAnalyzer.cs" />
+    <Compile Include="DataAnalyzer\ParameterCalculators\BaseParameterCalculator.cs" />
+    <Compile Include="DataAnalyzer\ParameterCalculators\Calculator.cs" />
     <Compile Include="Forms\BasicDailyDataWindow.xaml.cs">
       <DependentUpon>BasicDailyDataWindow.xaml</DependentUpon>
     </Compile>
@@ -146,9 +148,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="DataAnalyzer\Divide\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
