--- a/AlphaS/AlphaS/AlphaS.csproj
+++ b/AlphaS/AlphaS/AlphaS.csproj
@@ -70,20 +70,23 @@
     <Compile Include="BasicDailyData\BasicDailyDataViewModel.cs" />
     <Compile Include="BasicDailyData\IBasicDailyDataManager.cs" />
     <Compile Include="BasicDailyData\IBasicDailyDataMissionListGenerator.cs" />
-    <Compile Include="DataAnalyzer\ParameterFuturePriceTableManager.cs" />
-    <Compile Include="DataAnalyzer\ParameterFuturePriceTableInformation.cs" />
-    <Compile Include="DataAnalyzer\FuturePriceDataManager.cs" />
-    <Compile Include="DataAnalyzer\FuturePriceDataInformation.cs" />
-    <Compile Include="DataAnalyzer\AnalyzedDataInformation.cs" />
-    <Compile Include="DataAnalyzer\AnalyzedDataManager.cs" />
+    <Compile Include="DataAnalyzer\FuturePriceRankData\FuturePriceStockInfromation.cs" />
+    <Compile Include="DataAnalyzer\ParameterFuturePriceTable\ParameterFuturePriceTableManager.cs" />
+    <Compile Include="DataAnalyzer\ParameterFuturePriceTable\ParameterFuturePriceTableInformation.cs" />
+    <Compile Include="DataAnalyzer\FuturePriceData\FuturePriceDataManager.cs" />
+    <Compile Include="DataAnalyzer\FuturePriceData\FuturePriceDataInformation.cs" />
+    <Compile Include="DataAnalyzer\AnalyzeData\AnalyzedDataInformation.cs" />
+    <Compile Include="DataAnalyzer\AnalyzeData\AnalyzedDataManager.cs" />
     <Compile Include="DataAnalyzer\DataAnalyzer.cs" />
-    <Compile Include="DataAnalyzer\IParameterFuturePriceTableManager.cs" />
-    <Compile Include="DataAnalyzer\IFuturePriceDataManager.cs" />
-    <Compile Include="DataAnalyzer\IAnalyzedDataManager.cs" />
+    <Compile Include="DataAnalyzer\ParameterFuturePriceTable\IParameterFuturePriceTableManager.cs" />
+    <Compile Include="DataAnalyzer\FuturePriceData\IFuturePriceDataManager.cs" />
+    <Compile Include="DataAnalyzer\AnalyzeData\IAnalyzedDataManager.cs" />
     <Compile Include="DataAnalyzer\DataAnalyzerViewModel.cs" />
     <Compile Include="DataAnalyzer\IDataAnalyzer.cs" />
     <Compile Include="DataAnalyzer\ParameterCalculators\BaseParameterCalculator.cs" />
     <Compile Include="DataAnalyzer\ParameterCalculators\Calculator.cs" />
+    <Compile Include="DataAnalyzer\ScoreData\IScoreDataManager.cs" />
+    <Compile Include="DataAnalyzer\ScoreData\ScoreDataInformation.cs" />
     <Compile Include="Forms\BasicDailyDataWindow.xaml.cs">
       <DependentUpon>BasicDailyDataWindow.xaml</DependentUpon>
     </Compile>
